--- a/locale/en_US/LC_MESSAGES/django.po
+++ b/locale/en_US/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-03 19:26+0000\n"
+"POT-Creation-Date: 2020-11-04 21:07+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4948,7 +4948,7 @@ msgid "Add a new user with the \"bot\" role (<i>Administration</i> &gt; <i>Users
 msgstr ""
 
 #, python-format
-msgid "Install the app <b>%(brand)s Channel Integration</b> from the <i>Marketplace</i>."
+msgid "Install the app <b>%(brand)s Channel</b> from the <i>Marketplace</i>."
 msgstr ""
 
 #, python-format
